header design and menu expanding / collapsing logic fixing

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,6 +1,6 @@
 @import "@styles/glob.scss";
 .header {
-	border: 1px solid blue;
+	//border: 1px solid blue;
 	width: 100%;
 	box-sizing: border-box;
 	height: 70px;
