--- a/src/pages/headers-footers/headers-footers.scss
+++ b/src/pages/headers-footers/headers-footers.scss
@@ -8,17 +8,20 @@
 		margin-left: 51px;
 	}
 	&__header {
-		height: 30px;
-		background-color: red;
+		//	height: 30px;
+		//	background-color: red;
 		//	border: 1px solid red;
 		&:nth-of-type(2) {
-			margin-top: 140px;
-		}
-		&:nth-of-type(3) {
 			margin-top: 40px;
 		}
-		&:nth-of-type(4) {
-			margin-top: 40px;
-		}
+		// &:nth-of-type(3) {
+		// 	margin-top: 40px;
+		// }
+		// &:nth-of-type(4) {
+		// 	margin-top: 40px;
+		// }
+	}
+	&__footer {
+		margin-top: 40px;
 	}
 }
